mochad-0.1.6

    * Add RF event filter to eliminate the flurry of duplicate events.
    This makes it much easier to write applications.
    * Skip extra leading 0x5D on received RF packets from CM15A.

mochad-0.1.5

    * Fix RFCAM command so it shows the transmit message.
    * Fix RF command which sent the wrong house in some cases. [ID: 3197002]

mochad-0.1.4

    * Fix RFCAM command so it takes house code as a parameter. For example,
    RFCAM C CAMUP sends a camera pan up command on house code C.
    Previously, RFCAM commands always used house code N. 

mochad-0.1.3

    * Change the method for sending dim/bright commands so it matches AHP
    The new method uses 3 bytes instead of 2. This seems to work better
    with LM465 soft-start devices. xdim works much better and is easier to use
    but does not work with all lamp modules.
    * Add example client programs in Perl and bash.
    * Add --version command line parameter.
    * Add support for SP554 motion sensor

mochad-0.1.2

    * Fix device name in log messages. CM19A was reported as CM15A.
    * Add install option that makes the controllers hot pluggable. udev in
    Ubunutu and hotplug2 in OpenWrt
    * Convert to use autoconf and automake.
    * Update mochad wiki pages with command and event reference. Also add
    instructions for building with OpenWrt.